--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
-<html lang="en" data-beasties-container>
-<head>
+<!DOCTYPE html><html lang="en" data-beasties-container><head>
   <meta charset="utf-8">
-  <title>TaskManager</title>
+  <title>Pwa</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles-5INURTSO.css"></head>
-<body>
-  <app-root></app-root>
-<script src="main-S6JTRSOX.js" type="module"></script></body>
-</html>
+  <link rel="manifest" href="manifest.webmanifest">
+<link rel="stylesheet" href="styles-5INURTSO.css"><style ng-app-id="ng">#counter-container[_ngcontent-ng-c2283532919]{display:flex;flex-direction:column;align-items:center;justify-content:center;background:linear-gradient(135deg,#74ebd5,#acb6e5);padding:30px;border-radius:20px;width:200px;margin:50px auto;box-shadow:0 10px 20px #0003;font-family:Arial,sans-serif}#counter[_ngcontent-ng-c2283532919]{font-size:48px;font-weight:700;color:#fff;margin-bottom:20px;text-shadow:2px 2px 5px rgba(0,0,0,.3)}button[_ngcontent-ng-c2283532919]{padding:10px 25px;font-size:16px;font-weight:700;border:none;border-radius:10px;background-color:#fff;color:#74ebd5;cursor:pointer;transition:all .3s ease;box-shadow:0 5px 10px #0003}button[_ngcontent-ng-c2283532919]:hover{background-color:#74ebd5;color:#fff;transform:translateY(-2px);box-shadow:0 8px 15px #0000004d}</style><style ng-app-id="ng">#counter-container[_ngcontent-ng-c1577029075]{display:flex;flex-direction:column;align-items:center;justify-content:center;background:linear-gradient(135deg,#74ebd5,#acb6e5);padding:30px;border-radius:20px;width:200px;margin:50px auto;box-shadow:0 10px 20px #0003;font-family:Arial,sans-serif}#counter[_ngcontent-ng-c1577029075]{font-size:48px;font-weight:700;color:#fff;margin-bottom:20px;text-shadow:2px 2px 5px rgba(0,0,0,.3)}button[_ngcontent-ng-c1577029075]{padding:10px 25px;font-size:16px;font-weight:700;border:none;border-radius:10px;background-color:#fff;color:#74ebd5;cursor:pointer;transition:all .3s ease;box-shadow:0 5px 10px #0003}button[_ngcontent-ng-c1577029075]:hover{background-color:#74ebd5;color:#fff;transform:translateY(-2px);box-shadow:0 8px 15px #0000004d}</style></head>
+<body><!--nghm--><script type="text/javascript" id="ng-event-dispatch-contract">(()=>{function p(t,n,r,o,e,i,f,m){return{eventType:t,event:n,targetElement:r,eic:o,timeStamp:e,eia:i,eirp:f,eiack:m}}function u(t){let n=[],r=e=>{n.push(e)};return{c:t,q:n,et:[],etc:[],d:r,h:e=>{r(p(e.type,e,e.target,t,Date.now()))}}}function s(t,n,r){for(let o=0;o<n.length;o++){let e=n[o];(r?t.etc:t.et).push(e),t.c.addEventListener(e,t.h,r)}}function c(t,n,r,o,e=window){let i=u(t);e._ejsas||(e._ejsas={}),e._ejsas[n]=i,s(i,r),s(i,o,!0)}window.__jsaction_bootstrap=c;})();
+</script><script>window.__jsaction_bootstrap(document.body,"ng",["click"],[]);</script>
+  <app-root ng-version="21.0.2" _nghost-ng-c2283532919 ngh="1" ng-server-context="ssg"><app-game-component _ngcontent-ng-c2283532919 _nghost-ng-c1577029075 ngh="0"><div _ngcontent-ng-c1577029075 id="counter-container"><div _ngcontent-ng-c1577029075 id="counter">0</div><button _ngcontent-ng-c1577029075 jsaction="click:;">Pulsar</button></div></app-game-component><router-outlet _ngcontent-ng-c2283532919></router-outlet><app-app-shell ngh="0"><p>app-shell works!</p></app-app-shell><!----></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="main-VPK5CUVQ.js" type="module"></script>
+
+<script id="ng-state" type="application/json">{"__nghData__":[{},{"c":{"1":[{"i":"c505264239","r":1}]}}]}</script></body></html>
